--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
   display: grid;
-  grid-template-columns: repeat(3, minmax(140px, max-content));
+  grid-template-columns: repeat(3, minmax(130px, 170px));
   column-gap: 1rem;
 }
