--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,12 +1,18 @@
-$primary: #346cb9;
-$primary--hover: #3975c9;
-$primary-bg: #f7f7ff;
-$primary-bg--hover: #e2e2ee;
+$primary: #0a9396;
+$primary--hover: #11a4a7;
+
+$header-bg: #0d2642;
+
+$primary-bg: #f6fff8;
+
+$shadow: #e2e2ee;
 
 $primary-text: #333;
 $primary-btn-text: #fff;
 
+$border: #e4f3f3;
+
 $input-border: #888;
 $input-border--focused: #666;
 
-$popup-overlay: rgba(0, 0, 0, 0.2);
+$popup-overlay: rgba(0, 0, 0, 0.4);
