--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: $primary-bg;
 }
 
 .app-content {
@@ -11,9 +12,10 @@
   flex: 1;
   align-self: center;
   width: $laptop-view;
+  background-color: #fff;
   margin: 2rem 0;
   padding: 2rem;
-  box-shadow: 2px 2px 20px $primary-bg--hover;
+  box-shadow: 2px 2px 20px $shadow;
 
   @include laptop-view {
     width: calc(100% - 2rem);
