--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -8,8 +8,6 @@
   align-items: center;
   justify-content: center;
 
-  line-height: 1rem;
-
   border: none;
   border-radius: 0.3rem;
 
@@ -26,6 +24,12 @@
 
   &--fullWidth {
     width: 100%;
+  }
+
+  &__text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.1rem;
   }
 
   &__icon {
