--- a/src/components/DropdownList/DropdownList.scss
+++ b/src/components/DropdownList/DropdownList.scss
@@ -2,8 +2,8 @@
 
 .dropdown-list {
   position: absolute;
-  top: 110%;
   right: 0;
+  top: 110%;
   width: max-content;
   min-width: 100%;
   max-height: 0;
@@ -11,7 +11,7 @@
   opacity: 0;
   z-index: 2;
   box-shadow: 0px 4px 8px 0px rgba(34, 60, 80, 0.2);
-  transition: 0.15s ease-in-out all;
+  transition: 0.15s ease-in opacity;
 
   &--open {
     max-height: max-content;
@@ -20,6 +20,7 @@
 
   @include mobile-view {
     position: fixed;
-    min-width: max-content;
+    width: 100%;
+    left: 0 !important;
   }
 }
